2013-12-20  Tassilo Horn  <tsdh@gnu.org>

	* rmail.texi: Document `S-SPC' as alternative to scrolling down
	with `DEL'.

	* help.texi: Ditto.

	* display.texi: Ditto.

	* calendar.texi: Ditto.

	* frames.texi: Document `toggle-frame-maximized' and
	`toggle-frame-fullscreen' with their respective keys.

	* buffers.texi: Document buffer name uniquification changes.

	* indent.texi: Document that `electric-indent-mode' is enabled by
	default.

	* display.texi (Cursor Display): Document `blink-cursor-blinks'.

	* buffers.texi: Update list-buffers "screeshot" to show Messages
	as major-mode.

	* entering.texi: Document `initial-buffer-choice' changes.

	* misc.texi (emacsclient Options): Document
	`initial-buffer-choice' changes.

	* help.texi: Document that `?' now also shows subcommands of
	prefix keys.

2013-12-17  Chong Yidong  <cyd@gnu.org>

	* killing.texi (Appending Kills): Note that append-next-kill can
	prepend the kill.

2013-12-12  Eli Zaretskii  <eliz@gnu.org>

	* mule.texi (File Name Coding): Document file-name encoding
	peculiarities on MS-Windows.

2013-12-12  Glenn Morris  <rgm@gnu.org>

	* emacs.texi: Sync direntry with info/dir version.

2013-12-08  Juanma Barranquero  <lekktu@gmail.com>

	* msdog.texi (Windows Keyboard): Fix typo.

2013-11-30  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (distclean): Remove Makefile.

2013-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffers.texi (Icomplete): Rename from Iswitchb and
	rewrite accordingly.

2013-11-23  Glenn Morris  <rgm@gnu.org>

	* cmdargs.texi (General Variables):
	Empty elements in EMACSLOADPATH now mean the default load-path.

2013-11-21  Glenn Morris  <rgm@gnu.org>

	* cmdargs.texi (Action Arguments): Use path-separator with -L.

2013-11-04  Glenn Morris  <rgm@gnu.org>

	* cmdargs.texi (Action Arguments): Mention that `-L :...' appends.

2013-11-02  Glenn Morris  <rgm@gnu.org>

	* cmdargs.texi (Action Arguments): Clarify `-L' a bit.

2013-10-23  Glenn Morris  <rgm@gnu.org>
